force-app/main/default/objects/CMPL123__Product__c/CMPL123__Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>