force-app/main/default/objects/CMPL123__Product__c/fields/CMPL123__Active__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product is active or retired.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>