force-app/main/default/objects/CMPL123__Product__c/fields/CMPL123__CMPL123Task_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__CMPL123Task_Key_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Field Update Key Value</label>
    <length>254</length>
    <type>Text</type>
</CustomField>