force-app/main/default/objects/CMPL123__Product__c/fields/CMPL123__Product_Style__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Product_Style__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Style</label>
    <length>100</length>
    <type>Text</type>
</CustomField>