force-app/main/default/objects/CMPL123__Product__c/fields/CMPL123__Therapeutica_Area__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Therapeutica_Area__c</fullName>
    <description>The Therapeutic Area for which the product has indications.</description>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>