force-app/main/default/objects/CMPL123__Product__c/fields/CMPL123__TWD_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__TWD_External_ID__c</fullName>
    <description>External Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TWD External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>