force-app/main/default/objects/CMPL123__Product__c/fields/CMPL123__Type__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Type__c</fullName>
    <description>Type of product, e.g. Drug or Device.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implantable</fullName>
            </value>
            <value>
                <fullName>Active device</fullName>
            </value>
            <value>
                <fullName>Intended to administer and/or remove a medicinal product</fullName>
            </value>
            <value>
                <fullName>Sterile conditions</fullName>
            </value>
            <value>
                <fullName>Measuring function</fullName>
            </value>
            <value>
                <fullName>Reusable surgical instruments</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
            <value>
                <fullName>Procedure packs</fullName>
            </value>
            <value>
                <fullName>Custom-made</fullName>
            </value>
            <value>
                <fullName>Non-medical purpose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>