force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Analysis_Site__c.field-meta.xml
<CustomField>
    <fullName>OLY_Analysis_Site__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zAnalysis Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>