force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Common_Device_Name__c.field-meta.xml
<CustomField>
    <fullName>OLY_Common_Device_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Common Device Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>