force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Countries_Sold_In__c.field-meta.xml
<CustomField>
    <fullName>OLY_Countries_Sold_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Countries Sold In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>