force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Device_or_Similar_Device_sold_in_USA__c.field-meta.xml
<CustomField>
    <fullName>OLY_Device_or_Similar_Device_sold_in_USA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zDevice or Similar Device sold in USA?</label>
    <type>Checkbox</type>
</CustomField>