force-app/main/default/objects/CMPL123__Product__c/fields/OLY_FDA_Exempt_PMA__c.field-meta.xml
<CustomField>
    <fullName>OLY_FDA_Exempt_PMA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FDA Exempt PMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>