force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Importer_Address_Street_Line_1__c.field-meta.xml
<CustomField>
    <fullName>OLY_Importer_Address_Street_Line_1__c</fullName>
    <formula>OLY_Importer_Site__r.OLY_Address_Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importer Address Street Line 1</label>
    <type>Text</type>
</CustomField>