force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Importer_City__c.field-meta.xml
<CustomField>
    <fullName>OLY_Importer_City__c</fullName>
    <formula>OLY_Importer_Site__r.OLY_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importer City</label>
    <type>Text</type>
</CustomField>