force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Importer_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>OLY_Importer_Contact_Last_Name__c</fullName>
    <formula>OLY_Importer_Site__r.OLY_Contact_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importer Contact Last Name</label>
    <type>Text</type>
</CustomField>