force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Importer_Name__c.field-meta.xml
<CustomField>
    <fullName>OLY_Importer_Name__c</fullName>
    <formula>OLY_Importer_Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importer Name</label>
    <type>Text</type>
</CustomField>