force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Importer_Site__c.field-meta.xml
<CustomField>
    <fullName>OLY_Importer_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Importer Site</label>
    <referenceTo>OLY_Importer_Site__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>