force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Importer_State_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Importer_State_Code__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; OLY_Importer_Site__r.OLY_State_Code__c, OLY_Importer_Site__r.OLY_State_Code__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importer State Code</label>
    <type>Text</type>
</CustomField>