force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Importer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Importer_Zip_Code__c</fullName>
    <formula>OLY_Importer_Site__r.OLY_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importer Zip Code</label>
    <type>Text</type>
</CustomField>