force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Investigation_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>OLY_Investigation_Responsibility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigation Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>