force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Is_Importer_for_importer_MDR__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Importer_for_importer_MDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zIs Importer (for importer MDR)?</label>
    <type>Checkbox</type>
</CustomField>