force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Is_Item_Lot_Coded__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Item_Lot_Coded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Item Lot Coded?</label>
    <type>Checkbox</type>
</CustomField>