force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Is_Item_Serialized__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Item_Serialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Item Serialized?</label>
    <type>Checkbox</type>
</CustomField>