force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Is_Olympus_the_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Olympus_the_Manufacturer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Olympus the Manufacturer?</label>
    <type>Checkbox</type>
</CustomField>