force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Is_Similar_Device_Sold__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Similar_Device_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Similar Device Sold?</label>
    <type>Checkbox</type>
</CustomField>