force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Item_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Item Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>