force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Labeled_for_Single_Use__c.field-meta.xml
<CustomField>
    <fullName>OLY_Labeled_for_Single_Use__c</fullName>
    <label>Labeled for Single Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>