force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Legal_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>OLY_Legal_Manufacturer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Manufacturer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>