force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Manufacturer_Address__c.field-meta.xml
<CustomField>
    <fullName>OLY_Manufacturer_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zManufacturer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>