force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Manufacturing_Country__c.field-meta.xml
<CustomField>
    <fullName>OLY_Manufacturing_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zManufacturing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>