force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_Address_Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_Address_Street_Line_2__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_Address_Street_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Address Street Line 2</label>
    <type>Text</type>
</CustomField>