force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_City__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_City__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer City</label>
    <type>Text</type>
</CustomField>