force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_Contact_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_Contact_Middle_Name__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_Contact_Middle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Contact Middle Name</label>
    <type>Text</type>
</CustomField>