force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_Country_Code__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_Country_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Country Code</label>
    <type>Text</type>
</CustomField>