force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_Facility__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_Facility__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_Facility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Facility</label>
    <type>Text</type>
</CustomField>