force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_Fax_Number__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_Fax_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Fax Number</label>
    <type>Text</type>
</CustomField>