force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_Postal_Code__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Postal Code</label>
    <type>Text</type>
</CustomField>