force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_State_Province_Territory__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_State_Province_Territory__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; OLY_Manufacturer_Site__r.OLY_State_Province_Territory__c, OLY_Manufacturer_Site__r.OLY_State_Province_Territory__r.CMPL123CME__Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer State/Province/Territory</label>
    <type>Text</type>
</CustomField>