force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Mfr_Zip_Code_Extension__c.field-meta.xml
<CustomField>
    <fullName>OLY_Mfr_Zip_Code_Extension__c</fullName>
    <formula>OLY_Manufacturer_Site__r.OLY_Zip_Code_Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Zip Code Extension</label>
    <type>Text</type>
</CustomField>