force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>OLY_Model_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>