force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Obligated_to_report_to_EU__c.field-meta.xml
<CustomField>
    <fullName>OLY_Obligated_to_report_to_EU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zObligated to report to EU?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>