force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Obligated_to_Report_to_USA__c.field-meta.xml
<CustomField>
    <fullName>OLY_Obligated_to_Report_to_USA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligated to Report to USA?</label>
    <type>Checkbox</type>
</CustomField>