force-app/main/default/objects/CMPL123__Product__c/fields/OLY_PMA_510k__c.field-meta.xml
<CustomField>
    <fullName>OLY_PMA_510k__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PMA/510(k) #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>