force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Procode__c.field-meta.xml
<CustomField>
    <fullName>OLY_Procode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Procode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>