force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>