force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zProduct Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>