force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Summary__c</fullName>
    <formula>if( and(  
isblank( OLY_Model_Number__c),
isblank( OLY_Item_Code__c),
isblank( OLY_Product_Description__c)), 
&quot;_&quot;,

OLY_Model_Number__c

&amp; if( isblank( OLY_Item_Code__c ), &quot; | &quot; &amp; &quot;&quot;, &quot; |  &quot; &amp; OLY_Item_Code__c )

&amp; if( isblank( OLY_Product_Description__c ), &quot;&quot;, &quot; (&quot; &amp; OLY_Product_Description__c &amp; &quot;)&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Summary</label>
    <type>Text</type>
</CustomField>