force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Regional_Investigation_Center__c.field-meta.xml
<CustomField>
    <fullName>OLY_Regional_Investigation_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zRegional Investigation Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>