force-app/main/default/objects/CMPL123__Product__c/fields/OLY_RSS_Family__c.field-meta.xml
<CustomField>
    <fullName>OLY_RSS_Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RSS Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>