force-app/main/default/objects/CMPL123__Product__c/fields/OLY_Type__c.field-meta.xml
<CustomField>
    <fullName>OLY_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>