force-app/main/default/objects/CMPL123__Product__c/fields/OLY_UDI__c.field-meta.xml
<CustomField>
    <fullName>OLY_UDI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UDI</label>
    <length>150</length>
    <type>Text</type>
</CustomField>