force-app/main/default/objects/CMPL123__Product__c/fields/OLY_zProduct_Coding_Group__c.field-meta.xml
<CustomField>
    <fullName>OLY_zProduct_Coding_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zProduct Coding Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>