force-app/main/default/objects/CMPL123__Product__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
    <fullName>CMPL123__All</fullName>
    <columns>NAME</columns>
    <columns>CMPL123__Product_Description__c</columns>
    <columns>OLY_Item_Code__c</columns>
    <columns>OLY_Product_Coding_Group__c</columns>
    <columns>OLY_Model_Number__c</columns>
    <columns>OLY_Device_Type__c</columns>
    <columns>CMPL123__Product_Family__c</columns>
    <columns>OLY_Manufacturer_Site__c</columns>
    <columns>OLY_Importer_Site__c</columns>
    <columns>OLY_Countries_Sold_In__c</columns>
    <columns>OLY_Is_Olympus_the_Manufacturer__c</columns>
    <columns>OLY_Obligated_to_Report_to_USA__c</columns>
    <columns>OLY_Is_Similar_Device_Sold__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Records *</label>
</ListView>